--- a/interferogram_processing.ipynb
+++ b/interferogram_processing.ipynb
@@ -18,13 +18,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "id": "8f9b2e3d-c244-4aaa-82a0-d75c6a2174c1",
    "metadata": {},
    "outputs": [],
    "source": [
     "import glob\n",
-    "import os"
+    "import os\n",
+    "from datetime import datetime\n",
+    "import itertools"
    ]
   },
   {
@@ -901,13 +903,265 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6a3c3173-64b4-40f0-a87d-15c43aaf5ddf",
+   "execution_count": 23,
+   "id": "0d5e0e3b-bca6-46c7-b855-1c2d65afb1a8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# stackStripMap.py -s SLC/ -d CentralCali_TDX.dem.wgs84 -a 8 -r 2 -W interferogram --nofocus -S uavsar_stack -t 600 --filter_strength 0.2"
+    "!cp -r /u/sar-r0/fielding/Calif/SF_Bay/topo/USGS/1_3asec/ ./dem"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "6a3c3173-64b4-40f0-a87d-15c43aaf5ddf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is the Open Source version of ISCE.\n",
+      "Some of the workflows depend on a separate licensed package.\n",
+      "To obtain the licensed package, please make a request for ISCE\n",
+      "through the website: https://download.jpl.nasa.gov/ops/request/index.cfm.\n",
+      "Alternatively, if you are a member, or can become a member of WinSAR\n",
+      "you may be able to obtain access to a version of the licensed sofware at\n",
+      "https://winsar.unavco.org/software/isce\n",
+      "Sensor is not hard-coded (ers, envisat, alos), will keep default alks\n",
+      "['/u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/SLC/20100115', '/u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/SLC/20200910', '/u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/SLC/20171020', '/u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/SLC/20170403', '/u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/SLC/20090220', '/u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/SLC/20201007', '/u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/SLC/20180801', '/u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/SLC/20100301', '/u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/SLC/20160324', '/u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/SLC/20111103', '/u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/SLC/20100423', '/u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/SLC/20141112', '/u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/SLC/20121102', '/u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/SLC/20101110', '/u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/SLC/20140528', '/u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/SLC/20110712', '/u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/SLC/20151008', '/u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/SLC/20120413', '/u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/SLC/20091119']\n",
+      "['20090220', '20091119', '20100115', '20100301', '20100423', '20101110', '20110712', '20111103', '20120413', '20121102', '20140528', '20141112', '20151008', '20160324', '20170403', '20171020', '20180801', '20200910', '20201007']\n",
+      "reference date was not found. The first acquisition will be considered as the stack reference date.\n",
+      "Baseline at top/bottom: 0.000000 0.000000\n",
+      "Baseline at top/bottom: 0.000000 0.000000\n",
+      "Baseline at top/bottom: 0.000000 0.000000\n",
+      "Baseline at top/bottom: 0.000000 0.000000\n",
+      "Baseline at top/bottom: 0.000000 0.000000\n",
+      "Baseline at top/bottom: 0.000000 0.000000\n",
+      "Baseline at top/bottom: 0.000000 0.000000\n",
+      "Baseline at top/bottom: 0.000000 0.000000\n",
+      "Baseline at top/bottom: 0.000000 0.000000\n",
+      "Baseline at top/bottom: 0.000000 0.000000\n",
+      "Baseline at top/bottom: 0.000000 0.000000\n",
+      "Baseline at top/bottom: 0.000000 0.000000\n",
+      "Baseline at top/bottom: 0.000000 0.000000\n",
+      "Baseline at top/bottom: 0.000000 0.000000\n",
+      "Baseline at top/bottom: 0.000000 0.000000\n",
+      "Baseline at top/bottom: 0.000000 0.000000\n",
+      "Baseline at top/bottom: 0.000000 0.000000\n",
+      "Baseline at top/bottom: 0.000000 0.000000\n",
+      "20091119  :  0.0\n",
+      "20100115  :  0.0\n",
+      "20100301  :  0.0\n",
+      "20100423  :  0.0\n",
+      "20101110  :  0.0\n",
+      "20110712  :  0.0\n",
+      "20111103  :  0.0\n",
+      "20120413  :  0.0\n",
+      "20121102  :  0.0\n",
+      "20140528  :  0.0\n",
+      "20141112  :  0.0\n",
+      "20151008  :  0.0\n",
+      "20160324  :  0.0\n",
+      "20170403  :  0.0\n",
+      "20171020  :  0.0\n",
+      "20180801  :  0.0\n",
+      "20200910  :  0.0\n",
+      "20201007  :  0.0\n",
+      "##################\n",
+      "SLCs with min degree connection of 1.0\n",
+      "20200910\n",
+      "20201007\n",
+      "##################\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/fwilliam/tools/isce2/contrib/stack/stripmapStack/stackStripMap.py\", line 367, in <module>\n",
+      "    main(sys.argv[1:])\n",
+      "  File \"/home/fwilliam/tools/isce2/contrib/stack/stripmapStack/stackStripMap.py\", line 338, in main\n",
+      "    pairs = selectPairs(inps,stackReferenceDate, secondaryDates, acquisitionDates,doBaselines=False)\n",
+      "  File \"/u/sarh0/fwilliam/tools/isce2/contrib/stack/stripmapStack/Stack.py\", line 757, in selectPairs\n",
+      "    plotNetwork(baselineDict, timeDict, pairs,os.path.join(inps.workDir,'pairs.pdf'))\n",
+      "  File \"/u/sarh0/fwilliam/tools/isce2/contrib/stack/stripmapStack/Stack.py\", line 810, in plotNetwork\n",
+      "    raise Exception('The network for cascading coregistration   is not connected')\n",
+      "Exception: The network for cascading coregistration   is not connected\n"
+     ]
+    }
+   ],
+   "source": [
+    "!stackStripMap.py -s SLC/ -d ./dem/BayArea_USGS_13.dem.wgs84 -a 8 -r 2 -W interferogram --nofocus -S uavsar_stack -t 600 --filter_strength 0.2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "369ca353-91d5-477c-af8d-fa5ec425b0a0",
+   "metadata": {},
+   "source": [
+    "It looks like 600 is not a large enough time delta to create a connected network, lets determine what the minimum time delta needed is:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "c36fe810-eddd-4ad3-b253-4273431212d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.timedelta(771)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = ['20090220', '20091119', '20100115', '20100301', '20100423', '20101110', '20110712', '20111103', '20120413', '20121102', '20140528', '20141112', '20151008', '20160324', '20170403', '20171020', '20180801', '20200910', '20201007']\n",
+    "dates = [datetime.strptime(x,'%Y%m%d') for x in d]\n",
+    "dates.sort()\n",
+    "difference = [x-y for x,y in zip(dates,[dates[0]]+dates[0:-1])]\n",
+    "max(difference)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "9465edad-fe1a-45f4-bf95-84cb0bc211c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is the Open Source version of ISCE.\n",
+      "Some of the workflows depend on a separate licensed package.\n",
+      "To obtain the licensed package, please make a request for ISCE\n",
+      "through the website: https://download.jpl.nasa.gov/ops/request/index.cfm.\n",
+      "Alternatively, if you are a member, or can become a member of WinSAR\n",
+      "you may be able to obtain access to a version of the licensed sofware at\n",
+      "https://winsar.unavco.org/software/isce\n",
+      "Sensor is not hard-coded (ers, envisat, alos), will keep default alks\n",
+      "['/u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/SLC/20100115', '/u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/SLC/20200910', '/u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/SLC/20171020', '/u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/SLC/20170403', '/u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/SLC/20090220', '/u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/SLC/20201007', '/u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/SLC/20180801', '/u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/SLC/20100301', '/u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/SLC/20160324', '/u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/SLC/20111103', '/u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/SLC/20100423', '/u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/SLC/20141112', '/u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/SLC/20121102', '/u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/SLC/20101110', '/u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/SLC/20140528', '/u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/SLC/20110712', '/u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/SLC/20151008', '/u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/SLC/20120413', '/u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/SLC/20091119']\n",
+      "['20090220', '20091119', '20100115', '20100301', '20100423', '20101110', '20110712', '20111103', '20120413', '20121102', '20140528', '20141112', '20151008', '20160324', '20170403', '20171020', '20180801', '20200910', '20201007']\n",
+      "reference date was not found. The first acquisition will be considered as the stack reference date.\n",
+      "Baseline at top/bottom: 0.000000 0.000000\n",
+      "Baseline at top/bottom: 0.000000 0.000000\n",
+      "Baseline at top/bottom: 0.000000 0.000000\n",
+      "Baseline at top/bottom: 0.000000 0.000000\n",
+      "Baseline at top/bottom: 0.000000 0.000000\n",
+      "Baseline at top/bottom: 0.000000 0.000000\n",
+      "Baseline at top/bottom: 0.000000 0.000000\n",
+      "Baseline at top/bottom: 0.000000 0.000000\n",
+      "Baseline at top/bottom: 0.000000 0.000000\n",
+      "Baseline at top/bottom: 0.000000 0.000000\n",
+      "Baseline at top/bottom: 0.000000 0.000000\n",
+      "Baseline at top/bottom: 0.000000 0.000000\n",
+      "Baseline at top/bottom: 0.000000 0.000000\n",
+      "Baseline at top/bottom: 0.000000 0.000000\n",
+      "Baseline at top/bottom: 0.000000 0.000000\n",
+      "Baseline at top/bottom: 0.000000 0.000000\n",
+      "Baseline at top/bottom: 0.000000 0.000000\n",
+      "Baseline at top/bottom: 0.000000 0.000000\n",
+      "20091119  :  0.0\n",
+      "20100115  :  0.0\n",
+      "20100301  :  0.0\n",
+      "20100423  :  0.0\n",
+      "20101110  :  0.0\n",
+      "20110712  :  0.0\n",
+      "20111103  :  0.0\n",
+      "20120413  :  0.0\n",
+      "20121102  :  0.0\n",
+      "20140528  :  0.0\n",
+      "20141112  :  0.0\n",
+      "20151008  :  0.0\n",
+      "20160324  :  0.0\n",
+      "20170403  :  0.0\n",
+      "20171020  :  0.0\n",
+      "20180801  :  0.0\n",
+      "20200910  :  0.0\n",
+      "20201007  :  0.0\n",
+      "##################\n",
+      "SLCs with min degree connection of 2.0\n",
+      "20200910\n",
+      "20201007\n",
+      "##################\n",
+      "number of pairs:  54\n",
+      "writing  /u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/run_files/run_01_reference\n",
+      "writing  /u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/run_files/run_02_focus_split\n",
+      "writing  /u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/run_files/run_03_geo2rdr_coarseResamp\n",
+      "writing  /u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/run_files/run_04_refineSecondaryTiming\n",
+      "writing  /u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/run_files/run_05_invertMisreg\n",
+      "writing  /u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/run_files/run_06_fineResamp\n",
+      "writing  /u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/run_files/run_07_grid_baseline\n",
+      "writing  /u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1/run_files/run_08_igram\n"
+     ]
+    }
+   ],
+   "source": [
+    "!stackStripMap.py -s SLC/ -d ./dem/BayArea_USGS_13.dem.wgs84 -a 8 -r 2 -W interferogram --nofocus -S uavsar_stack -t 800 --filter_strength 0.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "28e1ea33-c008-44a1-a18f-0f2dca51702b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "run_01_reference                  run_05_invertMisreg\n",
+      "run_01_reference.job              run_05_invertMisreg.job\n",
+      "run_02_focus_split                run_06_fineResamp\n",
+      "run_02_focus_split.job            run_06_fineResamp.job\n",
+      "run_03_geo2rdr_coarseResamp       run_07_grid_baseline\n",
+      "run_03_geo2rdr_coarseResamp.job   run_07_grid_baseline.job\n",
+      "run_04_refineSecondaryTiming      run_08_igram\n",
+      "run_04_refineSecondaryTiming.job  run_08_igram.job\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls run_files\\"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "b8a2e108-549a-434d-883a-9b3d1454eaf0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "usage: run.py [-h] -i INPUT [-p PROCESSORS]\n",
+      "\n",
+      "Preparing input rdf and processing workflow for phase unwrapping\n",
+      "\n",
+      "optional arguments:\n",
+      "  -h, --help            show this help message and exit\n",
+      "  -i INPUT, --input INPUT\n",
+      "                        input run file which contains multiple commands to be\n",
+      "                        run. Each line is assumed to be a command that can be\n",
+      "                        run independent of other commands\n",
+      "  -p PROCESSORS, --number_of_processors PROCESSORS\n",
+      "                        number of processors\n"
+     ]
+    }
+   ],
+   "source": [
+    "!run.py -h"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ee21170-2971-42d9-b36d-b7616164885f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
