--- a/interferogram_processing.ipynb
+++ b/interferogram_processing.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "id": "8f9b2e3d-c244-4aaa-82a0-d75c6a2174c1",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c7b58ac4-a311-45d1-87f5-e24dd0ef1b01",
    "metadata": {},
    "outputs": [
@@ -97,6 +97,14 @@
    "metadata": {},
    "source": [
     "## Perform ISCE Processing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53616dff-309a-4e2e-8301-4f426188f8e0",
+   "metadata": {},
+   "source": [
+    "### Create Run Files"
    ]
   },
   {
@@ -1123,7 +1131,7 @@
     }
    ],
    "source": [
-    "ls run_files\\"
+    "ls run_files"
    ]
   },
   {
@@ -1157,8 +1165,114 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "3798f7f7-198f-45dd-9ba5-0b5046276788",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32\n"
+     ]
+    }
+   ],
+   "source": [
+    "!nproc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ccd1d124-febf-43d2-ae4c-d39fe5971053",
+   "metadata": {},
+   "source": [
+    "### Excecute Run Files"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "5ee21170-2971-42d9-b36d-b7616164885f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!run.py -p 1 -i run_files/run_01_reference |& tee -i log_01_reference.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d3c13c0-51bb-4d7a-a354-b9d5287b9eb6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!run.py -p 1 -i run_files/run_02_focus_split |& tee -i log_02_focus_split.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c54224c9-6d6f-4ae9-b5fa-625d64dc80d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!run.py -p 1 -i run_files/run_03_geo2rdr_coarseResamp |& tee -i log_03_geo2rder_coarseResamp.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbe7e434-8e40-400f-b223-c7f9d4781111",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!run.py -p 1 -i run_files/run_04_refineSecondaryTiming |& tee -i log_04_refineSecondaryTiming.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d98caa0b-0df8-4967-b92f-009cb0960e8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!run.py -p 1 -i run_files/run_05_invertMisreg |& tee -i log_05_invertMisreg.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c0864e4-a4f9-4bea-8bfb-d967a39487f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!run.py -p 1 -i run_files/run_06_fineResamp |& tee -i log_06_fineResamp.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ec8958d-403c-4915-b0bf-e97bded5e35d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!run.py -p 1 -i run_files/run_07_grid_baseline |& tee -i log_07_grid_baseline.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37feb37e-b7a5-4e60-b92f-38d467652c99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!run.py -p 1 -i run_files/run_08_igram |& tee -i log_08_igram.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "efaaefa2-712e-4552-92a6-6523e2e73878",
    "metadata": {},
    "outputs": [],
    "source": []
