encountering error at step03

--- a/useful_code.ipynb
+++ b/useful_code.ipynb
@@ -185,9 +185,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ef44200f-41cc-4f3a-929d-9ee382126a0a",
+   "metadata": {},
+   "source": [
+    "## Email when command is done"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "93b3b9aa-4961-4b95-9f17-71d1754595f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/u/sar-r2/fwilliam/Calif/UAVSAR/Stacks/Haywrd_05502_01-S1\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd .."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "8a90eecf-785a-4e9b-a90a-005713824f32",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "baselines  downloadHH\t\t   JPL_internship\t pairs.pdf\n",
+      "configs    geom_reference\t   log_01_reference.txt  run_files\n",
+      "dem\t   Haywar_05502_01_BC.dop  merged\t\t sim.log\n",
+      "dop.txt    isce.log\t\t   offsets\t\t SLC\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls ; python JPL_internship/emailme.py"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a1b22b3-b73f-4a2c-92c7-d26646543757",
+   "id": "223af16a-40d8-4317-ad1c-6c6f3f741b60",
    "metadata": {},
    "outputs": [],
    "source": []
