--- a/interferogram_processing.ipynb
+++ b/interferogram_processing.ipynb
@@ -1511,7 +1511,8 @@
    "id": "e8f70b26-74d8-48ed-9944-527fd31fe263",
    "metadata": {},
    "source": [
-    "### Step 8 Log"
+    "### Step 8 Log\n",
+    "This step took 57 hours to complete (~1 hour per interferogram)"
    ]
   },
   {
@@ -6915,7 +6916,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -6929,7 +6930,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
