--- a/useful_code.ipynb
+++ b/useful_code.ipynb
@@ -232,9 +232,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dbc5c9b1-3f99-4275-bc44-66a26de55936",
+   "metadata": {},
+   "source": [
+    "## Interactive matplolib\n",
+    "Must install both `matplotlib` and `ipympl`. **Fully restart Jupyter after install otherwise it will not work!**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "56fced0e-b6fd-49ee-bcab-fc6442489a5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib widget\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "223af16a-40d8-4317-ad1c-6c6f3f741b60",
+   "id": "87dde6e2-0a4a-422d-a2ea-81a3f7e9bcd1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('https://raw.githubusercontent.com/plotly/datasets/master/tips.csv')\n",
+    "# Matplotlib Scatter Plot\n",
+    "plt.scatter('total_bill', 'tip',data=df)\n",
+    "plt.xlabel('Total Bill')\n",
+    "plt.ylabel('Tip')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ad84bd9-4e75-435f-8405-366e4f908e60",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -242,7 +278,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -256,7 +292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
