Specify DEM path in prep

--- a/interferogram_processing.ipynb
+++ b/interferogram_processing.ipynb
@@ -35,6 +35,9 @@
     "from datetime import datetime\n",
     "import itertools\n",
     "\n",
+    "## Specify DEM path\n",
+    "dem_path = '/u/sar-r0/fielding/Calif/SF_Bay/topo/USGS/1_3asec'\n",
+    "\n",
     "## Defining the home and data directories at the processing location\n",
     "tutorial_home_dir = os.path.abspath(os.getcwd())\n",
     "work_dir = os.path.abspath(os.getcwd())\n",
@@ -160,7 +163,7 @@
    "execution_count": null,
    "source": [
     "# !prepareUAVSAR_coregStack.py -h\n",
-    "!prepareUAVSAR_coregStack.py -i downloadHH -o SLC -d Haywar_05502_01_BC.dop -s 1"
+    "!prepareUAVSAR_coregStack.py -i downloadHH -o SLC -d Haywar_05502_01_BC.dop -s 2"
    ],
    "outputs": [],
    "metadata": {}
@@ -221,8 +224,8 @@
    "cell_type": "code",
    "execution_count": 21,
    "source": [
-    "# !cp -r /u/sar-r0/fielding/Calif/SF_Bay/topo/USGS/1_3asec/ ./dem\n",
-    "!ln -s /u/sar-r0/fielding/Calif/SF_Bay/topo/USGS/1_3asec"
+    "## Link DEM to working directory\n",
+    "os.symlink(dem_path, 'DEM')"
    ],
    "outputs": [],
    "metadata": {}
